src/k8s/kompose/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mariadb
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/back-end: "true"
        io.kompose.service: mariadb
    spec:
      containers:
        - env:
            - name: MARIADB_DATABASE
              valueFrom:
                configMapKeyRef:
                  key: MARIADB_DATABASE
                  name: envmariadb
            - name: MARIADB_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: MARIADB_PASSWORD
                  name: envmariadb
            - name: MARIADB_ROOT_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: MARIADB_ROOT_PASSWORD
                  name: envmariadb
            - name: MARIADB_USER
              valueFrom:
                configMapKeyRef:
                  key: MARIADB_USER
                  name: envmariadb
          image: nsustain/mariadb:latest
          name: mariadb
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mariadb-data
      restartPolicy: Always
      volumes:
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: mariadb-data
status: {}
