src/k8s/kompose/flarum-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: flarum
  name: flarum
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "443"
      port: 443
      targetPort: 443
    - name: "9000"
      port: 9000
      targetPort: 9000
  selector:
    io.kompose.service: flarum
status:
  loadBalancer: {}
