src/k8s/kompose/back-end-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: back-end
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/back-end: "true"
  podSelector:
    matchLabels:
      io.kompose.network/back-end: "true"
